# Simple-Survey_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/configs/: base_settings.py  constants.py  database_settings.py  dependencies.py
app/dtos/: admin.py  participant.py
app/models/: admin.py  answer.py  base_model.py  participant.py  question.py
app/routers/: __init__.py  admin.py  answer.py  participant.py  question.py  result.py  welcome.py
app/schemas/: participant.py
app/services/: admin.py  answer.py  participant.py  question.py  result.py
app/templates/: admin.html  answer_list.html  index.html  participant.html  question.html  results.html  signup.html
