[tool.poetry]
name = "simple-survey"
version = "0.1.0"
description = ""
authors = ["ysolarh <ysolarh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
tortoise-orm = {extras = ["asyncmy"], version = "^0.20.0"}
aerich = "^0.7.2"
cryptography = "^42.0.5"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
plotly = "^5.20.0"
pandas = "^2.2.1"
ipython = "^8.22.2"
pandas-stubs = "^2.2.1.240316"
werkzeug = "^3.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-passlib = "^1.7.7.20240311"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[tool.aerich]
tortoise_orm = "app.configs.database_settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
strict = true
plugins = [
    "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = "migrations.models.*"
ignore_errors = true
